--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -130,6 +130,14 @@
              flex-direction: row;
              justify-content: flex-end;
              padding-top: 2rem;
+             .slider1img{
+                 width: 50%;
+                 height: 90%;
+             }
+             .slider2img{
+                 width: 80%;
+                 height: 93%;
+             }
          }
          .ed{
              display: flex;
