--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -150,8 +150,9 @@
          .text{
              width: 90%;
              height: 100%;
-           justify-content: center;
+            justify-content: center;
              display: flex;
+             align-items: flex-start;
              flex-direction: column;
              padding-left: 3rem;
              h1{
@@ -164,18 +165,17 @@
             line-height: 1.8;
 
          }
-         button{
+         .now{
              outline: none;
              border: none;
              background-color: transparent;
              color: #000;
-             border-bottom: 1px solid black;
-             padding-bottom: 5px;
+             border: 1px solid black;
+             padding: 6px 20px;
              font-size: 1.4rem;
              transition: all .3s;
-             width: 25%;
              &:hover {
-                   border-bottom-color: #FDBF70;
+                   border-color: #FDBF70;
              }
             }
         }
